<resources>
    <string name="app_name">Geek</string>
    <string name="title_home">Home</string>
    <string name="title_games">Игры</string>
    <string name="title_events">Мероприятия</string>
    <string name="title_event">Мероприятие</string>
    <string name="email">Почта</string>
    <string name="password">Пароль</string>
    <string name="enter">Войти</string>
    <string name="registration">Регистрация</string>
    <string name="register">Зарегистрироваться</string>
    <string name="error_sign_in">Такой пользователь не найден</string>
    <string name="error_input_empty">Поле должно быть заполнено</string>
    <string name="empty_text"> </string>
    <string name="invalid_email">Неверный формат почты</string>
    <string name="invalid_password">Минимальная длина пароля 6 символов</string>
    <string name="error_email_already_exists">Эта почта уже используется</string>
    <string name="try_again">Попробуйте ещё раз</string>
    <string name="authorization">Авторизация</string>
    <string name="information_about_game">Информация об игре</string>
    <string name="dimensions_length_width_height">Размеры(ДxШxВ):</string>
    <string name="weight_title">Вес:</string>
    <string name="about_box_title">О коробке</string>
    <string name="profile_title">Профиль</string>
    <string name="my_games_collection">Моя коллекция игр</string>
    <string name="wishlist">Список желаний</string>
    <string name="nickname">ФИО/никнейм</string>
    <string name="edit_title">Изменить</string>
    <string name="show_all">Показать все</string>
    <string name="description_title">Описание</string>
    <string name="game">Игра</string>
    <string name="place">Место</string>
    <string name="time">Время</string>
    <string name="members">Участники</string>
    <string name="name_event">Название мероприятия</string>
    <string name="max_count_members">Максимальное число участников</string>
    <string name="save">Сохранить</string>
    <string name="create">Создавать</string>
    <string name="delete_title">Удалить</string>
    <string name="min_1_max_100">Минимум 1, максимум 100</string>
    <string name="participate">Участвовать</string>
    <string name="cancel_participation">Отменить участие</string>
    <string name="member">Участник</string>
    <string name="score">Счёт</string>
    <string name="add_player">Добавить игрока</string>
    <string name="select_player">Выберите игрока</string>
    <string name="add_round">Добавить партию</string>
    <string name="create_round">Создание раунд</string>
    <string name="write_title_round">Введите название раунда</string>
    <string name="cancel">Закрыть</string>
    <string name="accept">Подтвердить</string>
    <string name="btn_create">Создать</string>
    <string name="sure_want_to_delete">Вы действительно хотите удалить?</string>
    <string name="adding_title">Добавление</string>
    <string name="select_games_for_adding">Выберите игры для добавления:</string>
    <string name="enter_message">Введите сообщение</string>
    <string name="chat_title">Чат</string>
    <string name="filter">Фильтр</string>
    <string name="i_organizer">Я - Организатор</string>
    <string name="i_member">Я - Участник</string>
    <string name="i_not_member">Я - Не участник</string>
    <string name="actual">Актуальные</string>
    <string name="not_actual">Неактуальные</string>
    <string name="delete">Удалить</string>
    <string name="name_or_description_for_set">Название или описание для партии</string>
    <string name="enter_player_score">Укажите игрока и счёт</string>
    <string name="edit_profile">Редактирование профиля</string>
    <string name="title_status">Статус</string>
    <string name="download_game_rulebook">Скачать правила игры</string>
    <string name="failed_load_rule">Не удалось загрузить правила</string>
    <string name="collection_games">Коллекция игр</string>
</resources>