<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:gravity="center_vertical"
        android:paddingHorizontal="24dp"
        android:text="@string/enter_player_score"
        android:textAppearance="?textAppearanceBody1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner_player"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="5dp"
        android:prompt="@string/select_player"
        android:spinnerMode="dialog"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toStartOf="@id/score"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        tools:listitem="@layout/spinner_player" />

    <EditText
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:ems="2"
        android:gravity="center"
        android:inputType="number"
        android:maxLength="3"
        android:textAppearance="?textAppearanceHeadline6"
        app:layout_constraintBottom_toBottomOf="@id/spinner_player"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/spinner_player"
        app:layout_constraintTop_toTopOf="@id/spinner_player"
        tools:text="100" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_cancel"
        style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="36dp"
        android:layout_marginBottom="8dp"
        android:text="@string/cancel"
        android:textAllCaps="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_delete"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinner_player" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_delete"
        style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginBottom="8dp"
        android:text="@string/delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_save"
        app:layout_constraintStart_toEndOf="@id/btn_cancel"
        app:layout_constraintTop_toBottomOf="@id/spinner_player" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_save"
        style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="8dp"
        android:text="@string/save"
        android:textAllCaps="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_delete"
        app:layout_constraintTop_toBottomOf="@id/spinner_player" />

</androidx.constraintlayout.widget.ConstraintLayout>