<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_games">

    <fragment
        android:id="@+id/navigation_games"
        android:name="studio.stilip.geek.app.games.GamesFragment"
        android:label="@string/title_games"
        tools:layout="@layout/fragment_games">
        <action
            android:id="@+id/action_navigation_games_to_signIn"
            app:destination="@id/navigation_sign_in"
            app:popUpTo="@id/navigation_games"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_navigation_games_to_game_info"
            app:destination="@id/navigation_game_info" />
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="studio.stilip.geek.app.profile.ProfileFragment"
        android:label="@string/profile_title"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/action_navigation_profile_to_game_info"
            app:destination="@id/navigation_game_info" />
        <action
            android:id="@+id/action_navigation_profile_to_collection"
            app:destination="@id/navigation_collection" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="studio.stilip.geek.app.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_sign_up"
        android:name="studio.stilip.geek.app.authorization.SignUpFragment"
        android:label="@string/authorization"
        tools:layout="@layout/fragment_sign_up">
        <action
            android:id="@+id/action_navigation_sign_up_to_sign_in"
            app:destination="@id/navigation_sign_in"
            app:popUpTo="@id/navigation_sign_up"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_navigation_sign_up_to_games"
            app:destination="@id/navigation_games"
            app:popUpTo="@id/navigation_sign_up"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/navigation_sign_in"
        android:name="studio.stilip.geek.app.authorization.SignInFragment"
        android:label="@string/authorization"
        tools:layout="@layout/fragment_sign_in">
        <action
            android:id="@+id/action_navigation_sign_in_to_sign_up"
            app:destination="@id/navigation_sign_up"
            app:popUpTo="@id/navigation_sign_in"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_navigation_sign_in_to_games"
            app:destination="@id/navigation_games"
            app:popUpTo="@id/navigation_sign_in"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/navigation_game_info"
        android:name="studio.stilip.geek.app.games.gameinfo.GameInfoFragment"
        tools:layout="@layout/fragment_game_info" />

    <fragment
        android:id="@+id/navigation_collection"
        android:name="studio.stilip.geek.app.profile.collection.CollectionFragment"
        tools:layout="@layout/fragment_collection">
        <action
            android:id="@+id/action_navigation_collection_to_game_info"
            app:destination="@id/navigation_game_info" />
    </fragment>

</navigation>